--- a/category-of-services.css
+++ b/category-of-services.css
@@ -1,4 +1,3 @@
-
 .row img{
     width:100%;
 }
@@ -12,12 +11,6 @@
   color:white;
   z-index: 1;
 }
-
-#path{
-    padding-left: 15%;
-    margin-left: 1%;
-}
-
 
 .align-left{
     float:left
@@ -56,34 +49,11 @@
     text-align: center;
     
 }
-.carousel {
-  height: 500px;
-  margin-bottom: 5%;
-  margin-top:0%;
-  margin-left:15%;
-}
-/* Since positioning the image, we need to help out the caption */
-.carousel-caption {
-  z-index: 10;
-}
-
-/* Declare heights because of positioning of img element */
-.carousel .item {
-  height: 500px;
-  background-color: #777;
-}
-.carousel-inner > .item > img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  min-width: 100%;
-  height: 500px;
-}
 
 /* Main marketing message and sign up button */
 .row{
-    padding-bottom: 2%;
-    padding-left: 20%;
+    padding-bottom: 5%;
+    margin-left: 19%;
     width:80%;
 }
 
@@ -173,24 +143,14 @@
 /* RESPONSIVE CSS
 -------------------------------------------------- */
 @media (max-width: 768px) {
-.carousel{
-        margin-left: 0;
-    }
-.carousel-caption p {
-    margin-bottom: 20px;
-    font-size: 21px;
-    line-height: 1.4;
+    .row{
+        width:94%;
+        margin-left: 3%;
+        margin-right: 3%;
     }
 .row img{
     width:100%;
 }
-
-#path{
-    padding-left: 1%;
-    }
-.row{
-    padding-left: 1%;
-    }
 .navbar-wrapper{
      position: relative;
     left: 0px;
@@ -357,10 +317,4 @@
 .marketing .col-lg-4 p {
   margin-right: 10px;
   margin-left: 10px;
-}
-.featurette{
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: auto;
-    padding-right: auto;
 }
