--- a/smartphone-description.css
+++ b/smartphone-description.css
@@ -2,26 +2,41 @@
     height: 25%;
     
 }
+
 .h2, h2 {
     font-size: 30px;
-    padding-left: 7%;
+    padding-left: 13%;
+}
+.h8, h8{
+    font-size: 40px;
+    padding-left: 28%;
+}
+.h7, h7{
+    font-size: 40px;
+    padding-left: 23%;
 }
 .h4, h4 {
     font-size: 18px;
     padding-left: 38%;
 }
-.btn-group-lg>.btn, .btn-lg {
-    padding: 10px 16px;
-    font-size: 18px;
-    line-height: 1.3333333;
-    margin-left: 25%;
-    border-radius: 6px;
+.container {
+    padding-left: 15%;
+    margin-right: auto;
+    margin-left: auto;
 }
 .col{
   width=60%;
   height: 75%;  
 }
-
+.col-lg-4 {
+    width: 30%;
+    margin-top: 3%;
+    margin-bottom: 15%;
+}
+#p1{
+    font-size: 25px;
+    margin-top: 6%;
+}
 .h1,h1 {
     font-size: 36px;
     color: blue;
@@ -97,12 +112,20 @@
   min-width: 100%;
   height: 500px;
 }
-
+.btn-group-lg>.btn, .btn-lg {
+    padding: 10px 16px;
+    margin-left: 6%;
+    margin-bottom: 2%;
+    font-size: 18px;
+    line-height: 1.3333333;
+    border-radius: 6px;
+}
 /* Main marketing message and sign up button */
 .row{
-    padding-bottom: 5%;
+    padding-bottom: 8%;
+    padding-top: 3%;
     margin-left: 19%;
-    width:100%;
+    width:80%;
 }
 
 .navbar-default {
@@ -186,17 +209,37 @@
 .container2 {
     overflow:hidden;
 }
-
-
+#p1{
+   font-size: 20px;
+    margin-left: 20%;
+    margin-right: 20%;
+}
+.lead {
+    margin-bottom: 20%;
+    margin-top: 20%;
+}
 /* RESPONSIVE CSS
 -------------------------------------------------- */
 @media (max-width: 768px) {
-    .col-lg-4 {
-    width: 100;
+    .h8, h8{
+    font-size: 20px;
+    padding-left: 20%;
+}
+       .h7, h7{
+    font-size: 15px;
+    padding-left: 20%;
+}
+    .lead {
+    margin-bottom: 20%;
+    margin-top: 20%;
+    margin-left: 15%;
+}
+    .h2, h2 {
+    font-size: 30px;
+    padding-left: 30%;
 }
     .row{
         margin-left: 0px;
-        width: 100%;
         
     }
     container{
@@ -241,19 +284,7 @@
 }
 
 }
-
 @media (min-width: 768px) {
-    .h5, h5 {
-        margin-left: 14%;
-}
-     .row{
-        margin-left: 20%;
-        width: 80%;
-        
-    }
-    .col-lg-4{
-    width:30%;
-}
     .img-responsive{
     height:264px;
 }
