--- a/timgames.css
+++ b/timgames.css
@@ -13,6 +13,10 @@
   z-index: 1;
 }
 
+.row{
+    padding-left: 15%;
+}
+
 #path{
     padding-left: 15%;
     margin-left: 1%;
@@ -182,6 +186,10 @@
 .row img{
     width:100%;
 }
+    
+.row{
+    padding-left: 1%;    
+    }
 #path{
     padding-left: 1%;
     }
