--- a/personal-services.css
+++ b/personal-services.css
@@ -2,7 +2,14 @@
 .row img{
     width:100%;
 }
-
+.dropdown-backdrop {
+    position:static;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+   
+}
 #path{
     padding-left: 15%;
     margin-left: 1%;
