--- a/smartphone-description.css
+++ b/smartphone-description.css
@@ -2,7 +2,14 @@
     height: 25%;
     
 }
-
+.dropdown-backdrop {
+    position:static;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+   
+}
 .h2, h2 {
     font-size: 30px;
     padding-left: 13%;
@@ -23,10 +30,6 @@
     padding-left: 15%;
     margin-right: auto;
     margin-left: auto;
-}
-#path{
-    padding-left: 15%;
-    margin-left: 1%;
 }
 .col{
   width=60%;
@@ -233,9 +236,6 @@
     font-size: 15px;
     padding-left: 20%;
 }
-#path{
-    padding-left: 1%;
-    }
     .lead {
     margin-bottom: 20%;
     margin-top: 20%;
