--- a/Contacts.css
+++ b/Contacts.css
@@ -4,6 +4,14 @@
     margin-left: 35%;
     margin-right: 22%;
 }
+.dropdown-backdrop {
+    position:static;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+   
+}
 .panel-primary{
     margin-right:2%;
     margin-left:17%;
