--- a/Gp description.css
+++ b/Gp description.css
@@ -1,3 +1,9 @@
+.navbar-brand {
+    float: left;
+    height: 100%;
+    padding: 0;
+    line-height: 20px;
+}
 .dropdown-backdrop {
     position:static;
     top: 0;
@@ -6,20 +12,15 @@
     left: 0;
    
 }
-.row img{
-    width:100%;
-}
-
 .footer {
   margin-top: 0px;
   padding-top: 30px;
   padding-bottom: 30px;
   border-top: 1px solid #eee;
-  background-image: linear-gradient(to top, #000066 0%, #0000e6  100%);
-  color:white;
+   background-image: linear-gradient(to top, #000066 0%, #0000e6  100%);
+    color:white;
   z-index: 1;
 }
-
 .align-left{
     float:left
 }
@@ -37,18 +38,11 @@
     padding-bottom: 20px;
     padding-right:40px;
 }
-.navbar-brand {
-    float: left;
-    height: 100%;
-    padding: 0;
-    line-height: 20px;
-}
 
 .dropdown-menu.vertical-dropdown-menu {
     position:static;
     float:none;
 }
-
 .dropdown-menu{
     min-width: 0px;
     margin:0px 0 0;
@@ -58,35 +52,37 @@
     text-align: center;
     
 }
-.carousel {
-  height: 500px;
-  margin-bottom: 5%;
-  margin-top:0%;
-  margin-left:15%;
-}
-/* Since positioning the image, we need to help out the caption */
-.carousel-caption {
-  z-index: 10;
-}
 
-/* Declare heights because of positioning of img element */
-.carousel .item {
-  height: 500px;
-  background-color: #777;
+.container-video{
+    position: relative;
 }
-.carousel-inner > .item > img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  min-width: 100%;
-  height: 500px;
+.container-video>.video{
+    position:absolute;
+    width:100%;
+    height:100%;
+}
+.container-video>.spacer {
+    width:100%;
+    margin-top:80%;
 }
 
 /* Main marketing message and sign up button */
+.jumbotron {
+  margin-top:5%;
+  margin-left:0%;
+  text-align:justify;
+  background-image: linear-gradient(to top, #f5f5f0 0%, #e0e0d1 100%);
+  width: 80%;
+}
 .row{
-    padding-bottom: 0%;
+    padding-bottom: 5%;
     margin-left: 19%;
     width:80%;
+}
+.col-md-4{
+    padding-top:0;
+    width: 50%;
+     background-image: linear-gradient(to top, #f5f5f0 0%, #e0e0d1 100%);
 }
 
 .navbar-default {
@@ -175,38 +171,6 @@
 /* RESPONSIVE CSS
 -------------------------------------------------- */
 @media (max-width: 768px) {
-
-
-
-/* Declare heights because of positioning of img element */
-.carousel .item {
-  height: 300px;
-  background-color: #777;
-}
-.carousel-inner > .item > img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  min-width: 100%;
-  height: 300px;
-}
-    .row{
-    padding-bottom: 5%;
-    margin-left: 9%;
-    width:80%;
-}
-.carousel{
-        height:300px;
-        margin-left: 0;
-    }
-.carousel-caption p {
-    margin-bottom: 20px;
-    font-size: 21px;
-    line-height: 1.4;
-    }
-.row img{
-    width:100%;
-}
 .navbar-wrapper{
      position: relative;
     left: 0px;
@@ -233,12 +197,11 @@
 .navbar-header .navbar-toggle {
     border-color: #ddd;
 }
-
+    .jumbotron{
+        margin-left:15%;
+    }
 }
 @media (min-width: 768px) {
-    .featurette-heading {
-    font-size: 50px;
-  }
 #menu-mobile{
         display: none;
     }
@@ -317,7 +280,12 @@
     width:15%;
     height: 100%;
 }
-
+    .jumbotron {
+  margin-left:19%;
+  text-align:justify;
+  background-image: linear-gradient(to top, #f5f5f0 0%, #e0e0d1 100%);
+  width: 80%;
+}
      /* Remove the padding we set earlier */
   .masthead,
   .marketing,
@@ -342,35 +310,25 @@
 .dropdown-menu.vertical-dropdown-menu{
     background-image: linear-gradient(to top, #f5f5f0 0%,#ddd   100%);
     }
-/* Featurettes
-------------------------- */
-
-.featurette-divider {
-  margin: 80px 0; /* Space out the Bootstrap <hr> more */
+@keyframes slidy {
+0% { left: 0%; }
+20% { left: 0%; }
+25% { left: -100%; }
+45% { left: -100%; }
+50% { left: -200%; }
+70% { left: -200%; }
+75% { left: -300%; }
+95% { left: -300%; }
+100% { left: -400%; }
 }
-
-/* Thin out the marketing headings */
-.featurette-heading {
-  font-weight: 300;
-  line-height: 1;
-  letter-spacing: -1px;
-}
-}
-
-@media (min-width: 992px) {
-  .featurette-heading {
-    margin-top: 120px;
-  }
-}
-/* Center align the text within the three columns below the carousel */
-.marketing .col-lg-4 {
-  margin-bottom: 20px;
-  text-align: center;
-}
-.marketing h2 {
-  font-weight: normal;
-}
-.marketing .col-lg-4 p {
-  margin-right: 10px;
-  margin-left: 10px;
+div#slider { overflow: hidden; }
+div#slider figure img { width: 20%; float: left; }
+div#slider figure { 
+  position: relative;
+  width: 500%;
+  margin: 0;
+  left: 0;
+  text-align: left;
+  font-size: 0;
+  animation: 30s slidy infinite; 
 }
