--- a/Hw-and-config-support.css
+++ b/Hw-and-config-support.css
@@ -11,6 +11,14 @@
     text-align: right;
     margin-left: 8%;
 }
+.dropdown-backdrop {
+    position:static;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+   
+}
 .footer {
   margin-top: 0px;
   padding-top: 30px;
