--- a/Projects.css
+++ b/Projects.css
@@ -7,6 +7,14 @@
     padding: 0;
     line-height: 20px;
 }
+.dropdown-backdrop {
+    position:static;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+   
+}
 .footer {
   margin-top: 0px;
   padding-top: 30px;
