--- a/business-market.css
+++ b/business-market.css
@@ -4,6 +4,14 @@
     padding: 0;
     line-height: 20px;
 }
+.dropdown-backdrop {
+    position:static;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+   
+}
 .container img{
     width:100%;
 }
