--- a/category-of-assserv.css
+++ b/category-of-assserv.css
@@ -1,7 +1,14 @@
 .row img{
     width:100%;
 }
-
+.dropdown-backdrop {
+    position:static;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+   
+}
 .footer {
   margin-top: 0px;
   padding-top: 30px;
