--- a/tablet-description.css
+++ b/tablet-description.css
@@ -2,7 +2,14 @@
     height: 25%;
     
 }
-
+.dropdown-backdrop {
+    position:static;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+   
+}
 .h2, h2 {
     font-size: 30px;
     padding-left: 13%;
