--- a/testimonials.css
+++ b/testimonials.css
@@ -7,6 +7,14 @@
     width:100%;
     height:100%;
 }
+.dropdown-backdrop {
+    position:static;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+   
+}
 .container-video>.spacer {
     width:100%;
     margin-top:80%;
