--- a/timreading.css
+++ b/timreading.css
@@ -4,6 +4,9 @@
     padding: 0;
     line-height: 20px;
 }
+.container img{
+    width:100%;
+}
 .dropdown-backdrop {
     position:static;
     top: 0;
@@ -12,10 +15,13 @@
     left: 0;
    
 }
-.row{
-    padding-bottom: 0%;
-    margin-left: 19%;
-    margin-right: 0;
+#path{
+    padding-left: 15%;
+    margin-left: 1%;
+}
+#c1{
+    text-align: right;
+    margin-left: 8%;
 }
 .footer {
   margin-top: 0px;
@@ -25,10 +31,6 @@
    background-image: linear-gradient(to top, #000066 0%, #0000e6  100%);
     color:white;
   z-index: 1;
-}
-
-#container1{
-    padding-left: 20%;
 }
 .align-left{
     float:left
@@ -74,6 +76,29 @@
     width:100%;
     margin-top:80%;
 }
+.carousel {
+  height: 300px;
+  width:100%;
+  margin-top:0%;
+
+}
+/* Since positioning the image, we need to help out the caption */
+.carousel-caption {
+  z-index: 10;
+}
+
+/* Declare heights because of positioning of img element */
+.carousel .item {
+  height: 300px;
+  background-color: #777;
+}
+.carousel-inner > .item > img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  height: 300px;
+}
 
 /* Main marketing message and sign up button */
 .jumbotron {
@@ -83,17 +108,26 @@
   background-image: linear-gradient(to top, #f5f5f0 0%, #e0e0d1 100%);
   width: 80%;
 }
+.panel-body {
+   padding: 0px;
+}
 .row{
-    padding-bottom: 5%;
+    padding-bottom: 0%;
     margin-left: 19%;
-    width:80%;
+    margin-right: 0;
 }
 .col-md-4{
-    padding-top:0;
-    width: 50%;
-     background-image: linear-gradient(to top, #f5f5f0 0%, #e0e0d1 100%);
+    margin-left: 10%;
+    margin-top:2%;
 }
-
+#links{
+    text-align: right;
+    margin-right: 0px;
+}
+#col2{
+    background-image: linear-gradient(to top, #f5f5f0 0%, #e0e0d1 100%);
+    margin-top: 4%;
+}
 .navbar-default {
   width:100%
   background-color: #eee;
@@ -133,6 +167,10 @@
   border-radius: 0 0 5px 5px;
 }
 @media (min-width: 768px) {
+    .nav{
+        padding-left: 15%;
+        padding-top: 0.1%;
+    }
   .navbar-default {
     max-height: 52px;
   }
@@ -175,14 +213,58 @@
 .container2 {
     overflow:hidden;
 }
+.featurette-divider {
+  margin: 80px 0; /* Space out the Bootstrap <hr> more */
+}
+
+/* Thin out the marketing headings */
+.featurette-heading {
+  font-weight: 300;
+  line-height: 1;
+  letter-spacing: -1px;
+}
 
 
 /* RESPONSIVE CSS
 -------------------------------------------------- */
+ .featurette-heading {
+    font-size: 50px;
+  }
+}
+
+@media (min-width: 992px) {
+  .featurette-heading {
+    margin-top: 120px;
+  }
+}
 @media (max-width: 768px) {
+.carousel{
+        margin-left: 0;
+    }
+.carousel-caption p {
+    margin-bottom: 20px;
+    font-size: 21px;
+    line-height: 1.4;
+    }
+.row{
+
+    margin-left: 0%;
+   
+}
+#path{
+    padding-left: 1%;
+    }
+    
+    #col2{
+        margin-right: 5%;
+        margin-left:15%;
+}
 .navbar-wrapper{
      position: relative;
     left: 0px;
+    width:100%;
+}
+.row img{
     width:100%;
 }
 #menu-accordeon{
@@ -203,17 +285,11 @@
     height: 2px;
     border-radius: 1px;
 }
-    #container1{
-        padding-left:5%;
-    }
-.row{
-    margin-left: 5%;
-    }
 .navbar-header .navbar-toggle {
     border-color: #ddd;
 }
-.jumbotron{
-    margin-left:5%;
+    .jumbotron{
+        margin-left:15%;
     }
 }
 @media (min-width: 768px) {
@@ -325,26 +401,4 @@
 .dropdown-menu.vertical-dropdown-menu{
     background-image: linear-gradient(to top, #f5f5f0 0%,#ddd   100%);
     }
-@keyframes slidy {
-0% { left: 0%; }
-20% { left: 0%; }
-25% { left: -100%; }
-45% { left: -100%; }
-50% { left: -200%; }
-70% { left: -200%; }
-75% { left: -300%; }
-95% { left: -300%; }
-100% { left: -400%; }
-}
-div#slider { overflow: hidden; }
-div#slider figure img { width: 20%; float: left; }
-div#slider figure { 
-  position: relative;
-  width: 500%;
-  margin: 0;
-  left: 0;
-  text-align: left;
-  font-size: 0;
-  animation: 30s slidy infinite; 
-}
-Contact GitHub API Training Shop Blog About
+
