--- a/tv-entertainment.css
+++ b/tv-entertainment.css
@@ -12,7 +12,14 @@
   color:white;
   z-index: 1;
 }
-
+.dropdown-backdrop {
+    position:static;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+   
+}
 #path{
     padding-left: 15%;
     margin-left: 1%;
