--- a/tvfaq.css
+++ b/tvfaq.css
@@ -12,11 +12,6 @@
     left: 0;
    
 }
-.row{
-    padding-bottom: 0%;
-    margin-left: 19%;
-    margin-right: 0;
-}
 .footer {
   margin-top: 0px;
   padding-top: 30px;
@@ -26,15 +21,22 @@
     color:white;
   z-index: 1;
 }
-
-#container1{
-    padding-left: 20%;
-}
 .align-left{
     float:left
 }
 .align-right{
     float: right
+}
+
+#path{
+    padding-left: 15%;
+    margin-left: 1%;
+}
+#containerback{
+    padding-left: 15%;
+}
+.panel-group{
+    padding-left: 15%;
 }
 .navbar-justified{
     position:static;
@@ -46,6 +48,12 @@
     padding-top: 20px;
     padding-bottom: 20px;
     padding-right:40px;
+}
+
+.nav{
+    padding-left: 0%;
+    margin-bottom: 0;
+    list-style: none;
 }
 
 .dropdown-menu.vertical-dropdown-menu {
@@ -74,6 +82,29 @@
     width:100%;
     margin-top:80%;
 }
+.carousel {
+  height: 500px;
+  margin-bottom: 5%;
+  margin-top:0%;
+  margin-left:15%;
+}
+/* Since positioning the image, we need to help out the caption */
+.carousel-caption {
+  z-index: 10;
+}
+
+/* Declare heights because of positioning of img element */
+.carousel .item {
+  height: 500px;
+  background-color: #777;
+}
+.carousel-inner > .item > img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  height: 500px;
+}
 
 /* Main marketing message and sign up button */
 .jumbotron {
@@ -84,14 +115,14 @@
   width: 80%;
 }
 .row{
-    padding-bottom: 5%;
-    margin-left: 19%;
-    width:80%;
+    padding-bottom: 0%;
+    margin-left: 10%;
+    width:100%;
 }
 .col-md-4{
     padding-top:0;
     width: 50%;
-     background-image: linear-gradient(to top, #f5f5f0 0%, #e0e0d1 100%);
+    background-image: linear-gradient(to top, #f5f5f0 0%, #e0e0d1 100%);
 }
 
 .navbar-default {
@@ -133,6 +164,8 @@
   border-radius: 0 0 5px 5px;
 }
 @media (min-width: 768px) {
+    .nav{
+        padding-left: 15%;}
   .navbar-default {
     max-height: 52px;
   }
@@ -180,11 +213,31 @@
 /* RESPONSIVE CSS
 -------------------------------------------------- */
 @media (max-width: 768px) {
+.carousel{
+        margin-left: 0;
+    }
+.carousel-caption p {
+    margin-bottom: 20px;
+    font-size: 21px;
+    line-height: 1.4;
+    }
 .navbar-wrapper{
      position: relative;
     left: 0px;
     width:100%;
 }
+.row img{
+    width:100%;
+}
+#path{
+    padding-left: 1%;
+    }
+.panel-group{
+    margin-left: 1%;
+    padding-left: 1%;
+    margin-right: 1%;
+    padding-right: 1%;
+    }
 #menu-accordeon{
     display:none;
 }
@@ -203,17 +256,11 @@
     height: 2px;
     border-radius: 1px;
 }
-    #container1{
-        padding-left:5%;
-    }
-.row{
-    margin-left: 5%;
-    }
 .navbar-header .navbar-toggle {
     border-color: #ddd;
 }
-.jumbotron{
-    margin-left:5%;
+    .jumbotron{
+        margin-left:15%;
     }
 }
 @media (min-width: 768px) {
@@ -347,4 +394,3 @@ div#slider figure {
   font-size: 0;
   animation: 30s slidy infinite; 
 }
-Contact GitHub API Training Shop Blog About
