--- a/who-we-are.css
+++ b/who-we-are.css
@@ -25,6 +25,14 @@
     color: #FFFFFF;
     background-image: linear-gradient(to top, #000066 0%, #0000e6  100%);
 }
+.dropdown-backdrop {
+    position:static;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+   
+}
 .navbar-form{
     padding-top: 20px;
     padding-bottom: 20px;
