--- a/smartphone-description.css
+++ b/smartphone-description.css
@@ -2,14 +2,7 @@
     height: 25%;
     
 }
-.dropdown-backdrop {
-    position:static;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-   
-}
+
 .h2, h2 {
     font-size: 30px;
     padding-left: 13%;
@@ -30,6 +23,10 @@
     padding-left: 15%;
     margin-right: auto;
     margin-left: auto;
+}
+#path{
+    padding-left: 15%;
+    margin-left: 1%;
 }
 .col{
   width=60%;
@@ -236,6 +233,9 @@
     font-size: 15px;
     padding-left: 20%;
 }
+#path{
+    padding-left: 1%;
+    }
     .lead {
     margin-bottom: 20%;
     margin-top: 20%;
